# smath

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: GTest.cmake
src/: fastsqrt.cpp  hashfloat.cpp  perlin.cpp  random.cpp  randomstate.cpp  vector.cpp
src/smath/: angle.h  config.h  config.h.in  constants.h  conversion.h  interpolation.h  matrix.h  matrixutils.h  perlin.h  quaternion.h  random.h  randomstate.h  rect.h  tmatrix.h  util.h  vector.h
tests/: test_angle.cpp  test_conversions.cpp  test_interpolation.cpp  test_matrix2.cpp  test_matrix4.cpp  test_matrixutils.cpp  test_quaternion.cpp  test_rect.cpp  test_utils.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp  unittesthelpers.h
